displaying tile image on home page. removing limit from image_size to prevent 'value too long' error.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -48,7 +48,8 @@ body.body
 				margin-bottom: 3px;
 				height: 200px;
 				display: inline-block;
-
+				background-repeat: no-repeat;
+				background-size: 100% 100%;
 			}
 		}
 	}
